Add serial interface to access video memory

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ xst
 *.log
 *.ipf
 planAhead_*
+impact_*
+# Makefile uses top_bit.ut
+top.ut
+# Makefile uses top_syr.xst
+top.xst
+!serial/license.txt
